{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 480,
  "lineage": "bac50cb0-50dc-4dfa-abc0-133b9dd09222",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:security-group/sg-052e433545ab97005",
            "description": "Complete PostgreSQL example security group",
            "egress": [],
            "id": "sg-052e433545ab97005",
            "ingress": [],
            "name": "testdb-20231113040922950900000004",
            "name_prefix": "testdb-",
            "owner_id": "033765504828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "PostgreSQL access from within VPC",
            "from_port": 5432,
            "id": "sgrule-1959263751",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-052e433545ab97005",
            "security_group_rule_id": "sgr-0bacda1a25de42620",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:network-acl/acl-06d3fbc3337134f57",
            "default_network_acl_id": "acl-06d3fbc3337134f57",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06d3fbc3337134f57",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "033765504828",
            "subnet_ids": [
              "subnet-0311f1331b2f329b9",
              "subnet-035a0aff707a729f3",
              "subnet-0963c414463d7f0d8",
              "subnet-0a7cfde6a7ea45076",
              "subnet-0ae03aa1a630ea80d",
              "subnet-0c2c00aca2c4d2848",
              "subnet-0cb9ad17554f8e6b6",
              "subnet-0cd6d73611a14b8b0",
              "subnet-0e1d427b4bee0576d"
            ],
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:route-table/rtb-0a19e9196dbaa2b19",
            "default_route_table_id": "rtb-0a19e9196dbaa2b19",
            "id": "rtb-0a19e9196dbaa2b19",
            "owner_id": "033765504828",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:security-group/sg-0f2fe88f947c35d40",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f2fe88f947c35d40",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "033765504828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:internet-gateway/igw-0e7227ed4b331d10e",
            "id": "igw-0e7227ed4b331d10e",
            "owner_id": "033765504828",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e7227ed4b331d10e",
            "id": "r-rtb-0b7da33919bf9d2fc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7da33919bf9d2fc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:route-table/rtb-09b73ab84168423e6",
            "id": "rtb-09b73ab84168423e6",
            "owner_id": "033765504828",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:route-table/rtb-0a05ddf1466c2fc58",
            "id": "rtb-0a05ddf1466c2fc58",
            "owner_id": "033765504828",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:route-table/rtb-072618ca0b1d7720a",
            "id": "rtb-072618ca0b1d7720a",
            "owner_id": "033765504828",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:route-table/rtb-0b7da33919bf9d2fc",
            "id": "rtb-0b7da33919bf9d2fc",
            "owner_id": "033765504828",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a81cab5e4094431d",
            "route_table_id": "rtb-09b73ab84168423e6",
            "subnet_id": "subnet-0e1d427b4bee0576d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f965adb0ee2c010b",
            "route_table_id": "rtb-0a05ddf1466c2fc58",
            "subnet_id": "subnet-0cb9ad17554f8e6b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e443958fbbb8c49",
            "route_table_id": "rtb-072618ca0b1d7720a",
            "subnet_id": "subnet-0c2c00aca2c4d2848"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02af030640fb0d75e",
            "route_table_id": "rtb-09b73ab84168423e6",
            "subnet_id": "subnet-0311f1331b2f329b9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e73660e38b5fb5a",
            "route_table_id": "rtb-0a05ddf1466c2fc58",
            "subnet_id": "subnet-035a0aff707a729f3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01450465c41f2110e",
            "route_table_id": "rtb-072618ca0b1d7720a",
            "subnet_id": "subnet-0cd6d73611a14b8b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe448e601920eaf5",
            "route_table_id": "rtb-0b7da33919bf9d2fc",
            "subnet_id": "subnet-0a7cfde6a7ea45076"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e9f091fc7ff4e93",
            "route_table_id": "rtb-0b7da33919bf9d2fc",
            "subnet_id": "subnet-0963c414463d7f0d8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f6f62cb3cd7799c",
            "route_table_id": "rtb-0b7da33919bf9d2fc",
            "subnet_id": "subnet-0ae03aa1a630ea80d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:subnet/subnet-0e1d427b4bee0576d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1d427b4bee0576d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033765504828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:subnet/subnet-0cb9ad17554f8e6b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb9ad17554f8e6b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033765504828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:subnet/subnet-0c2c00aca2c4d2848",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2c00aca2c4d2848",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033765504828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:subnet/subnet-0311f1331b2f329b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0311f1331b2f329b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033765504828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:subnet/subnet-035a0aff707a729f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035a0aff707a729f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033765504828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:subnet/subnet-0cd6d73611a14b8b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd6d73611a14b8b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033765504828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:subnet/subnet-0a7cfde6a7ea45076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7cfde6a7ea45076",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033765504828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:subnet/subnet-0963c414463d7f0d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0963c414463d7f0d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033765504828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:subnet/subnet-0ae03aa1a630ea80d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae03aa1a630ea80d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033765504828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "vpc_id": "vpc-02d74355785e847f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033765504828:vpc/vpc-02d74355785e847f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d3fbc3337134f57",
            "default_route_table_id": "rtb-0a19e9196dbaa2b19",
            "default_security_group_id": "sg-0f2fe88f947c35d40",
            "dhcp_options_id": "dopt-c88c62ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d74355785e847f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a19e9196dbaa2b19",
            "owner_id": "033765504828",
            "tags": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            },
            "tags_all": {
              "Example": "testdb",
              "Name": "testdb",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-rds"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}